Fixed: horizontal scrollbar removed

--- a/dbtapp/static/dbtapp/styleBase.css
+++ b/dbtapp/static/dbtapp/styleBase.css
@@ -44,6 +44,7 @@ body {
     font-family: 'Open sans', Arial, sans-serif;
     font-weight: 300;
     font-size: 15px;
+    overflow: hidden;
 }
 
 nav.navbar.navbar-default{
